--- a/css/style.css
+++ b/css/style.css
@@ -1,157 +1,4 @@
-* {
-    box-sizing: border-box;
-}
-body {
-    height: 960px;
-    width: 960px;
-    padding:0;
-    margin: auto;
-    text-align: center;
-    
-  }
-
-div{
-    background-color: #dddddd;
-    border:1px , solid ,#dddddd;
-}
-
-
-header {
-    width: 960px;
-    margin-top: 10%;
-}
-
-#a{
-    
-    width: 960px;
-    height: 100px;
-    border: 1px solid #a39d9d;
-   
-}
-
-
-.b{
-    float: left;   
-}
-
-#b{
-   
-    height: 600px;
-    width:200px;
-border-right:1px solid #a39d9d ;
-border-left:1px solid #a39d9d ;
-border-bottom:1px solid #a39d9d ;
-}
-
-
-
-#c{
-   
-  float: left;
-    height: 200px;
-    width: 380px;
-    border-right:1px solid #a39d9d ;
-    border-bottom:1px solid #a39d9d ;
-
-
-}
-#d{
-    float: left;
-    height: 200px;
-    width: 380px;
-    border-right:1px solid #a39d9d ;  
-    border-bottom:1px solid #a39d9d ;
-
-}
-#e{
-
-    float: left;
-    height: 250px;
-    width: 190px;
-    border-right:1px solid #a39d9d ;
-    border-bottom:1px solid #a39d9d ;
-
-}
-
-#f{
-
-    float: left;
-    height: 250px;
-    width: 190px;
-    border-right:1px solid #a39d9d ;
-    border-bottom:1px solid #a39d9d ;
-
-}
-
-#g{
-
-    float: left;
-    height: 250px;
-    width: 190px;
-    border-right:1px solid #a39d9d ;
-    border-bottom:1px solid #a39d9d ;
-
-}
-
-#h{
-
-    float: left;
-    height: 250px;
-    width: 190px;
-    border-right:1px solid #a39d9d ;
-    border-bottom:1px solid #a39d9d ;
-
-}
-/* footer {
-    height: 80px;
-    width: 100%; 
-} */
-#i{
-    float:left;
-    width:760px;
-    height: 150px;
-    border-right:1px solid #a39d9d ;
-    border-bottom:1px solid #a39d9d ;
-}
-
-/* #b{
-float: left;
-    height: 200px;
-    width: 60px;
-} */
-
-/* #c ,#d{
-    float: left;
-    height: 125px;
-    width: 100%;
-} */
-
-/* #eF ,#gH {
-    float: left;
-    height: 250px;
-    width: 100%;
-} */
-/* #e, #g{
-    float: left;
-    height: 250px;
-    width: 50%;
-} */
-
-/* #f,#h{
-    float: right;
-    height: 250px;
-    width: 50%;
-} */
-
-
-@media (min-width: 768px) {
-
-
-
-}
-
-@media (min-width:480px)and (max-width:767px){
-
-
-
-}
+@import 'reset.css';
+@import 'base.css';
+@import 'modules.css';
+@import 'theme.css';
